update export template

--- a/src/Template/cup/catalog/product/export.twig
+++ b/src/Template/cup/catalog/product/export.twig
@@ -13,6 +13,7 @@
         <th>{{ category.product.field_3 ? category.product.field_3 : 'Поле 3' }}</th>
         <th>Объем упаковки</th>
         <th>На складе</th>
+        <th>Дата</th>
         <th>Идентификатор</th>
         <th>Идентификатор внешний</th>
     </tr>
@@ -23,9 +24,9 @@
         <tr>
             <td>{{ item.title }}</td>
             <td>{{ buf.title }}</td>
-            <td>{{ item.price }}</td>
-            <td>{{ item.priceFirst }}</td>
-            <td>{{ item.priceWholesale }}</td>
+            <td>{{ item.price|format_number({fraction_digit: 2}) }}</td>
+            <td>{{ item.priceFirst|format_number({fraction_digit: 2}) }}</td>
+            <td>{{ item.priceWholesale|format_number({fraction_digit: 2}) }}</td>
             <td>{{ item.vendorcode }}</td>
             <td>{{ item.barcode ? item.barcode : '' }}</td>
             <td>{{ item.field1 }}</td>
@@ -33,6 +34,7 @@
             <td>{{ item.field3 }}</td>
             <td style="text-align: center">{{ item.getVolume() }}</td>
             <td style="text-align: center">{{ item.stock|format_number({fraction_digit: 2}) }}</td>
+            <td>{{ item.date|df }}</td>
             <td>{{ item.uuid }}</td>
             <td>{{ item.external_id }}</td>
         </tr>
