--- a/src/Template/cup/catalog/category/index.twig
+++ b/src/Template/cup/catalog/category/index.twig
@@ -33,9 +33,9 @@
                         <table data-table class="display table table-striped table-hover" >
                             <thead>
                                 <tr>
-                                    <th width="3%">#</th>
+                                    <th class="d-none">#</th>
                                     <th width="20%">Наименование</th>
-                                    <th width="15%">Основная категория</th>
+                                    <th width="15%">Родительская категория</th>
                                     <th>{{ fields.catalog_category_field_1 ?? 'Поле 1' }}</th>
                                     <th>{{ fields.catalog_category_field_2 ?? 'Поле 2' }}</th>
                                     <th>{{ fields.catalog_category_field_3 ?? 'Поле 3' }}</th>
@@ -45,7 +45,7 @@
                             <tbody>
                                 {% for category in categories.where('parent', category ? category.uuid : '00000000-0000-0000-0000-000000000000') %}
                                     <tr>
-                                        <td class="text-center">{{ category.order }}</td>
+                                        <td class="text-center d-none">{{ category.order }}</td>
                                         <td>
                                             <a href="/{{ parameter('catalog_address', 'catalog') }}/{{ category.address }}" target="_blank">
                                                 {{ category.title }}
@@ -67,6 +67,9 @@
                                                     </li>
                                                     <li>
                                                         <a href="/cup/catalog/product/{{ category.uuid }}" class="btn btn-link"><i class="fas fa-eye"></i> Номенклатура</a>
+                                                    </li>
+                                                    <li>
+                                                        <a href="/cup/catalog/data/export?category={{ category.uuid }}" class="btn btn-link"><i class="fas fa-file-export"></i> Экспорт продуктов</a>
                                                     </li>
                                                     <li>
                                                         <a href="/cup/catalog/category/{{ category.uuid }}/edit" class="btn btn-link"><i class="fas fa-edit"></i> Изменить</a>
