update plugin api
add cup route names
remove quickaction.twig

--- a/src/Template/cup/docs/dev/controller/catalog.list.twig
+++ b/src/Template/cup/docs/dev/controller/catalog.list.twig
@@ -3,7 +3,7 @@
 
     <code class="block pt-3 pb-3">App\Application\Actions\Common\Catalog\ListAction</code>
     <div>Route: <code class="block pt-3 pb-3">/{{ parameter('catalog_address', 'catalog') }}[/{args:.*}]</code></div>
-    <div>Name: <code class="block pt-3 pb-3">catalog</code></div>
+    <div>Name: <code class="block pt-3 pb-3">catalog:list</code></div>
 
     <p>
         Контроллер обслуживающий: страницу каталога, категории каталога и продукты каталога.
