--- a/src/Template/cup/navigation.twig
+++ b/src/Template/cup/navigation.twig
@@ -167,7 +167,7 @@
     </li>
 
     <li class="nav-item">
-        <a href="/cup/docs">
+        <a href="https://github.com/0x12f/platform/wiki" target="_blank">
             <i class="fas fa-book"></i>
             <p>Документация</p>
         </a>
