fix address cup

--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -21,7 +21,7 @@
                 <div class="main-header">
                     <!-- Logo Header -->
                     <div class="logo-header" data-background-color="blue">
-                        <a href="/" class="logo text-white">WebSpace Engine</a>
+                        <a href="/cup" class="logo text-white">WebSpace Engine</a>
 
                         <button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon">
