--- a/src/Template/mixin/recaptcha.twig
+++ b/src/Template/mixin/recaptcha.twig
@@ -36,6 +36,9 @@
 
                     // submit form
                     form.submit();
+
+                    // add listener again
+                    form.addEventListener('submit', handler);
                 };
 
                 // add listener
