--- a/src/Template/mixin/catalog.twig
+++ b/src/Template/mixin/catalog.twig
@@ -33,7 +33,7 @@
                             'product-attr': 'data-catalog-product-attr', // атрибут продукта
                             'product-add': 'data-catalog-product-add', // кнопка добавления продукта в корзину
                             'cart': 'data-catalog-cart', // место для корзины
-                            'cart-data': 'data-catalog-cart-data', // поле корзины
+                            'cart-data': 'data-catalog-cart-data', // поле данных клиента
                             'cart-checkout': 'data-catalog-cart-checkout', // кнопка отправки корзины
                             'count-items': 'data-catalog-cart-count', // счетчик количества наименований
                             'count-total': 'data-catalog-cart-total', // счетчик общей стоимости товаров
