--- a/theme/default/catalog.mail.client.twig
+++ b/theme/default/catalog.mail.client.twig
@@ -75,7 +75,7 @@
                                 <table border="0" cellpadding="0" cellspacing="0" width="100%">
                                     <tr>
                                         <td style="color: #ffffff; font-family: Arial, sans-serif; font-size: 12px;" width="75%">
-                                            ® <a href="{{ base_url() }}" style="color: #ffffff;">{{ parameter('common_title') }}</a>, {{ df('now', 'Y') }}<br />
+                                            ® <a href="{{ base_url() }}" style="color: #ffffff;">{{ parameter('common_title') }}</a>, {{ 'now'|df('Y') }}<br />
                                         </td>
                                         <td align="right" width="25%"></td>
                                     </tr>
