--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -28,7 +28,7 @@
                                 <i class="fas fa-bars"></i>
                             </span>
                         </button>
-                        <button class="topbar-toggler more"><i class="icon-options-vertical"></i></button>
+                        <button class="topbar-toggler more"><i class="fas fa-bars"></i></button>
                         <div class="nav-toggle">
                             <button class="btn btn-toggle toggle-sidebar">
                                 <i class="fas fa-bars"></i>
