--- a/src/Template/cup/task.twig
+++ b/src/Template/cup/task.twig
@@ -30,6 +30,18 @@
             </div>#}
 
             <div class="list-group list-group-file-item list-group-reflow list-group-flush list-group-divider">
+                <div class="list-group-item align-items-start" data-task-item style="display: none">
+                    <div class="list-group-item-body ml-3">
+                        <h5 class="list-group-item-title text-truncate m-0"></h5>
+                        <div class="progress mt-2" style="display: none; height: 10px">
+                            <div class="progress-bar" role="progressbar" style="width: 0"></div>
+                        </div>
+                    </div>
+                    <div class="list-group-item-figure">
+                        <p class="list-group-item-text small"></p>
+                    </div>
+                </div>
+
                 {% set date = '' %}
                 {% set color = '' %}
                 {% set text = '' %}
@@ -81,16 +93,32 @@
 <script>
     document.addEventListener('DOMContentLoaded', () => {
         let $taskList = $('[data-task-list]'),
-            $counter = $taskList.find('span.notification').hide();
+            $counter = $taskList.find('span.notification').hide(),
+            $today = $taskList.find('.list-group-header:first'),
+            $item = $taskList.find('[data-task-item]');
 
         $(window).on('event:task', (e, data) => {
-            let $el = $('[data-task-uuid="' + data.uuid + '"]'),
-                $status = $el.find('.list-group-item-text.small').removeClass('text-muted text-info text-success text-danger text-warning'),
+            let $el = $('[data-task-uuid="' + data.uuid + '"]');
+
+            if ($el.length === 0) {
+                $el = $item.clone();
+                $el.attr('data-task-uuid', data.uuid);
+                $el.find('.list-group-item-title').text(data.title);
+                $el.find('.list-group-item-text.small').text('В очереди');
+                $el.insertAfter($today).show();
+            }
+
+            let $status = $el.find('.list-group-item-text.small').removeClass('text-muted text-info text-success text-danger text-warning'),
                 $progress = $el.find('.progress');
 
             switch (data.status) {
+                case 'queue': {
+                    $status.text('В очереди').addClass('text-muted');
+                    break;
+                }
                 case 'work': {
                     $status.text('Работает').addClass('text-info');
+
                     if (+data.progress > 0) {
                         $progress.show().find('.progress-bar').css('width', data.progress + '%');
                     }
